# example-service

./: .gitignore  README.md  pyproject.toml
EXAMPLE/: __init__.py  config.yaml
